# lookbook

./: .env.example  .gitignore  AGENT_START_HERE.xml  ARCHITECTURE.md  BEAUTIFUL_DASHBOARD_SUMMARY.md  BENCHMARK_IMPROVEMENTS.md  CHAT_HISTORY_UPDATE.md  CHAT_IMPROVEMENTS_SUMMARY.md  DEBUG_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_SUCCESS.md  DOCS_INDEX.md  DOCS_ORGANIZATION_AND_ANALYSIS_SUMMARY.md  DOCUMENTATION_REORGANIZATION_SUMMARY.md  Dockerfile  Dockerfile.init  Dockerfile.vision  ENVIRONMENT_SETUP.md  EXCUTION_PLAN.md  FEATURES_AND_CAPABILITIES.md  FLEXIBLE_LLM_SETUP.md  LOGGING_GUIDE.md  OLLAMA_BENCHMARK_GUIDE.md  PLAN-AKENEO.md  PROJECT_KNOWLEDGE_BASE.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  RECOMMENDATION_ENGINE_STRATEGY.md  RECOMMENDATION_FIX_SUMMARY.md  SCRIPTS_CLEANUP_SUMMARY.md  SETUP_GUIDE.md  TECHNICAL_GUIDE.md  USER_DOCUMENTATION.md  USER_GUIDE.md  VISION_ANALYSIS_README.md  alembic.ini  create_table.sql  create_test_sqlite.py  debug_api_logging.py  (+28 more)
.history/: .agentrc_20250919211017  .gitignore_20250919214710  .gitignore_20250919214725  .lookbook_20250919193405.PRP  .lookbook_20250919193408.PRP  .lookbook_20250919193411.PRP  .lookbook_20250919193434.PRP  .lookbook_20250919193438.PRP  .lookbook_20250919193443.PRP  .lookbook_20250919193748.PRP  .lookbook_20250919193758.PRP  .lookbook_20250919193806.PRP  .lookbook_20250919193814.PRP  .lookbook_20250919193824.PRP  .lookbook_20250919193840.PRP  .lookbook_20250919193847.PRP  .lookbook_20250919193904.PRP  .lookbook_20250919193917.PRP  .lookbook_20250919193958.PRP  .lookbook_20250919194008.PRP  .lookbook_20250919194012.PRP  .lookbook_20250919194022.PRP  .lookbook_20250919194039.PRP  .lookbook_20250919194050.PRP  .lookbook_20250919194108.PRP  .lookbook_20250919194112.PRP  .lookbook_20250919194129.PRP  .lookbook_20250919194143.PRP  .lookbook_20250919194349.PRP  .lookbook_20250919194518.PRP  .lookbook_20250919194522.PRP  .lookbook_20250919194536.PRP  .lookbook_20250919194539.PRP  .lookbook_20250919194605.PRP  README_20250919214812.md  main_20250919211732.py  main_20250919211741.py  main_20250919211815.py  main_20250919211832.py  pyproject_20250919211600.toml  (+12 more)
docs/: README.md  (+6 more)
(+319 files in other folders)
